<resources>
    <string name="app_name">VEUBE</string>


    <string name="hint_id"><font size="15">ID Number</font></string>
    <string name="hint_username"><font size="15">Username to Join</font></string>


    <string name="hint_email"><font size="15">Registered Email</font></string>
    <string name="hint_password"><font size="15">Registered Password</font></string>

    <string name="hint_username_up"><font size="15">Username</font></string>
    <string name="hint_email_up"><font size="15">name@email.com</font></string>
    <string name="hint_password_up"><font size="15">At least 8 characters</font></string>
    <string name="hint_dob_up"><font size="15">DD/MM/YYYY</font></string>

    <string name="hint_otp_forgot"><font size="15">Enter registered email</font></string>
    <string name="hint_otp_register"><font size="15">Enter the OTP</font></string>

    <string name="hint_meet_schedule"><font size="15">Tap to create a reminder</font></string>
    <string name="title_activity_naviagation_menu">VEUBE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_manage"><font size="40"></font> Manage Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_change_username"><font size="15">Change screen name</font></string>
    <string name="hint_department"><font size="15">Department name or sector</font></string>
    <string name="title_activity_forgot_dialog">forgot_dialog</string>

    <string name="hint_current_password"><font size="15">Enter password</font></string>
    <string name="hint_new_password"><font size="15">Enter new password</font></string>
    <string name="hint_confirm_password"><font size="15">Re-enter new password</font></string>


</resources>
