<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7289DA"


    tools:context="com.example.rahulrajbaranwal.signup.MainActivity">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/image5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/image8" />
    <ImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:layout_alignStart="@+id/imageView5"
        android:background="@drawable/backbutton" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:defaultValue="@null"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="95dp"
        android:src="@drawable/dpuser"
        android:scaleType="centerCrop"
        android:layout_toEndOf="@+id/textView5"



         />

    <ImageButton
        android:id="@+id/upload"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="140dp"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_marginLeft="190dp"
        android:layout_toEndOf="@+id/imageView"
        android:background="@drawable/pencil" />


    <View
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginRight="30dp"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="#ffffff"

        />

    <View
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:layout_marginRight="50dp"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="@drawable/squareborder"

        />



    <View
        android:id="@+id/view2"
        android:layout_width="210dp"


        android:layout_height="2dp"
        android:layout_alignStart="@+id/imageView5"
        android:layout_alignTop="@+id/imageView5"
        android:layout_marginStart="23dp"
        android:layout_marginTop="45dp"
        android:background="#2e2e3a" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view2"
        android:layout_alignTop="@+id/imageView5"
        android:layout_marginTop="11dp"
        android:textSize="19sp"
        android:textColor="#000000"
        android:fontFamily="Montserrat"
        android:text="Sign Up" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view2"
        android:layout_below="@+id/view2"
        android:layout_marginTop="10dp"
        android:text="Name of User"
        android:fontFamily="Open sans"
        android:textColor="#000000"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:layout_marginTop="7dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_username_up"
        android:background="@drawable/edit_border"
        android:fontFamily="Open Sans"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:text="Enter Email Id"
        android:fontFamily="Open sans"
        android:textColor="#000000"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/name"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:layout_marginTop="7dp"
        android:hint="@string/hint_email_up"
        android:background="@drawable/edit_border"
        android:inputType="textEmailAddress"
        android:fontFamily="Open sans"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:fontFamily="Open sans"
        android:layout_centerVertical="true"
        android:text="Create a password"
        android:textColor="#000000"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="7dp"
        android:background="@drawable/edit_border"
        android:ems="10"
        android:fontFamily="Open sans"
        android:inputType="textPassword"
        android:hint="@string/hint_password_up"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/imageView3"
        android:fontFamily="Open sans"
        android:textColor="#000000"
        android:text="Date of Birth" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="7dp"
        android:background="@drawable/edit_border"
        android:ems="10"
        android:fontFamily="Open sans"
        android:inputType="date"
        android:hint="@string/hint_dob_up"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignStart="@+id/dob"
        android:layout_marginBottom="18dp"
        android:text="Already a user?" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView13"
        android:layout_toEndOf="@+id/textView8"
        android:text="Login"
        android:textColor="#7289DA"
        android:textSize="15sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="79dp"
        android:layout_height="39dp"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/textView13"
        android:layout_toEndOf="@+id/dob"
        android:background="@drawable/button_background"
        android:backgroundTint="#2e2e3a"
        android:text="Submit" />


</RelativeLayout>




